--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm run dev --prefix frontend",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "build": "npm install && npm install --prefix frontend --include=dev && npm run build --prefix frontend && node backend/scripts/createIndexes.js"
   },
   "repository": {
     "type": "git",
