--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "server": "nodemon server.js",
     "client": "npm run dev --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "build": "npm install && npm install --prefix frontend --include=dev && npm run build --prefix frontend && node backend/scripts/createIndexes.js"
+    "build": "npm install && npm install --prefix frontend --include=dev && npm run build --prefix frontend && node backend/scripts/createIndexes.js",
+    "build:dev": "npm run build --prefix frontend -- --mode development"
   },
   "repository": {
     "type": "git",
@@ -33,7 +34,10 @@
     "validator": "^13.15.26"
   },
   "devDependencies": {
+    "@vitejs/plugin-react-swc": "^4.2.2",
     "concurrently": "^9.2.1",
-    "nodemon": "^3.1.11"
+    "lovable-tagger": "^1.1.13",
+    "nodemon": "^3.1.11",
+    "vite": "^7.3.1"
   }
 }
